--- a/code-samples/ARRetail/app/src/main/res/layout/activity_product_detail.xml
+++ b/code-samples/ARRetail/app/src/main/res/layout/activity_product_detail.xml
@@ -5,9 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.virosample.ProductDetailActivity">
-    <WebView  xmlns:android="http://schemas.android.com/apk/res/android"
+
+    <WebView
         android:id="@+id/webview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
